# Tuenti-Challenge

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  cmake_build.sh
1.The.Buffer/: CMakeLists.txt  main.cpp
10.HSL/: hsl.py
10.HSL/server_example/: hsl.config  provided.py
10.HSL/server_example/templates/: invalid_credentials.html  login_form.html  show_key.html
11.Crazy.Tower/: CMakeLists.txt  Hero.hpp  ModularArithmetic.hpp  Room.hpp  Scenario.hpp  main.cpp
2.Almost.prime/: CMakeLists.txt  main.cpp  testInput.sql
3.Favourite.primes/: CMakeLists.txt  main.cpp  numbers.txt.xz  submitInput.sql  testInput.sql
4.A.Bitter.Dinner/: CMakeLists.txt  main.cpp  testInput.sql
5.The.One.Treasure/: 5.The.One.Treasure.rar  CMakeLists.txt  Island.hpp  World.hpp  exampleInput.sql  main.cpp  submitInput.sql  testInput.sql
6.Airscrews/: CMakeLists.txt  check_md5.py  exampleInput.sql  main.cpp  submitInput.sql  testInput.sql
7.The.Perfect.Larry.Matching.Algorithm/: CMakeLists.txt  Girl.hpp  GirlVisitor.hpp  exampleInput.sql  main.cpp  submitInput.sql  testInput.sql
8.Alchemy.Pot/: CMakeLists.txt  Inventory.hpp  RecipeBook.hpp  RecipeTree.hpp  exampleInput.sql  main.cpp  submitInput.sql
9.X.Correlate/: CMakeLists.txt  exampleInput.sql  findScore.hpp  main.cpp  submitInput.sql  testInput.sql  xcorrgiven.cpp
Challenge 1 - The Buffer/: CMakeLists.txt  submitInput.sql
Challenge 2 - Almost prime/: CMakeLists.txt  main.cpp  submitInput.sql
Challenge 3 - Favourite primes/: CMakeLists.txt  main.cpp
